trunk/3rdParty/Htmlayout/api/htmlayout_dom.h


typedef int HLDOM_RESULT;
  typedef UINT FAR *LPUINT;
typedef LPVOID HELEMENT;
EXTERN_C HLDOM_RESULT HLAPI HTMLayout_UseElement(HELEMENT he);
EXTERN_C HLDOM_RESULT HLAPI HTMLayout_UnuseElement(HELEMENT he);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutGetRootElement(HWND hwnd, HELEMENT *phe);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutGetFocusElement(HWND hwnd, HELEMENT *phe);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutFindElement(HWND hwnd, POINT pt, HELEMENT* phe);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutGetChildrenCount(HELEMENT he, UINT* count);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutGetNthChild(HELEMENT he, UINT n, HELEMENT* phe);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutGetParentElement(HELEMENT he, HELEMENT* p_parent_he);
 EXTERN_C HLDOM_RESULT HLAPI HTMLayoutGetElementHtml(HELEMENT he, LPBYTE* utf8bytes, BOOL outer);
 EXTERN_C HLDOM_RESULT HLAPI HTMLayoutGetElementInnerText16(HELEMENT he, LPWSTR* utf16words);
 EXTERN_C HLDOM_RESULT HLAPI HTMLayoutSetElementInnerText16(HELEMENT he, LPCWSTR utf16words, UINT length);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutGetAttributeCount(HELEMENT he, LPUINT p_count);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutGetNthAttribute(HELEMENT he, UINT n, LPCSTR* p_name, LPCWSTR* p_value);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutGetAttributeByName(HELEMENT he, LPCSTR name, LPCWSTR* p_value);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutSetAttributeByName(HELEMENT he, LPCSTR name, LPCWSTR value);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutClearAttributes(HELEMENT he);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutGetElementIndex(HELEMENT he, LPUINT p_index);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutGetElementType(HELEMENT he, LPCSTR* p_type);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutGetStyleAttribute(HELEMENT he, LPCSTR name, LPCWSTR* p_value);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutSetStyleAttribute(HELEMENT he, LPCSTR name, LPCWSTR value);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutGetElementLocation(HELEMENT he, LPRECT p_location, UINT areas );
enum HTMLAYOUT_SCROLL_FLAGS
{
  SCROLL_TO_TOP = 0x01,
  SCROLL_SMOOTH = 0x10,
};
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutScrollToView(HELEMENT he, UINT  flags);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutUpdateElement(HELEMENT he, BOOL remeasure);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutSetCapture(HELEMENT he);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutGetElementHwnd(HELEMENT he, HWND* p_hwnd, BOOL rootWindow);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutCombineURL(HELEMENT he, LPWSTR szUrlBuffer, DWORD UrlBufferSize);
typedef BOOL CALLBACK HTMLayoutElementCallback( HELEMENT he, LPVOID param );
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutSelectElements(
          HELEMENT  he, 
          LPCSTR    CSS_selectors,
          HTMLayoutElementCallback* 
                    callback, 
          LPVOID    param);
EXTERN_C  HLDOM_RESULT HLAPI HTMLayoutSelectParent(
          HELEMENT  he, 
          LPCSTR    selector,
          UINT      depth,
           HELEMENT* heFound);
EXTERN_C HLDOM_RESULT HLAPI 
      HTMLayoutSetElementHtml(HELEMENT he, LPCBYTE html, DWORD htmlLength, UINT where);
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutDeleteElement(HELEMENT he);
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutGetElementUID(HELEMENT he, UINT* puid);
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutGetElementByUID(HWND hwnd, UINT uid, HELEMENT* phe);