desktop/Expemerent.UI/Native/HtmlayoutDomApi.cs

using System;
using System.Collections.Generic;
using System.Diagnostics;
using System.Drawing;
using System.Security;
using System.Runtime.InteropServices;
using System.Text;
using Expemerent.UI.Dom;
using Expemerent.UI.Behaviors;

namespace Expemerent.UI.Native
{
    #region Htmlayout dom interface

    /// <summary>
    /// Sciter dom interface
    /// </summary>
    [SuppressUnmanagedCodeSecurityAttribute]
    internal partial class SciterDomApi
    {
        #region Function prototypes

        /// <summary>
        /// Marks DOM object as unused (a.k.a. AddRef).
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayout_UseElement")]
        private static extern ScDomResult SciterUseElement(IntPtr he);

        /// <summary>
        /// Marks DOM object as unused (a.k.a. Release). Get handle of every element's child element.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayout_UnuseElement")]
        private static extern ScDomResult SciterUnuseElement(IntPtr he);

        /// <summary>
        /// Get root DOM element of HTML document.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetRootElement")]
        private static extern ScDomResult SciterGetRootElement(IntPtr hwnd, out IntPtr phe);

        /// <summary>
        /// Get focused DOM element of HTML document.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetFocusElement")]
        private static extern ScDomResult SciterGetFocusElement(IntPtr hwnd, IntPtr phe);

        /// <summary>
        /// Find DOM element by coordinate.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutFindElement")]
        private static extern ScDomResult SciterFindElement(IntPtr hwnd, Point pt, out IntPtr phe);

        /// <summary>
        /// Get number of child elements.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetChildrenCount")]
        private static extern ScDomResult SciterGetChildrenCount(IntPtr he, out int count);

        /// <summary>
        /// Get handle of every element's child element.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetNthChild")]
        private static extern ScDomResult SciterGetNthChild(IntPtr he, int n, out IntPtr phe);

        /// <summary>
        /// Get parent element.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetParentElement")]
        private static extern ScDomResult SciterGetParentElement(IntPtr he, out IntPtr p_parent_he);

        /// <summary>
        /// Get text of the element and information where child elements are placed.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetElementHtml")]
        private static extern ScDomResult SciterGetElementHtml(IntPtr he, /*[MarshalAs(UnmanagedType.LPStr)]*/ out IntPtr utf8bytes, bool outer);

        /// <summary>
        /// Get inner text of the element as LPWSTR (utf16 words).
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetElementInnerText16")]
        private static extern ScDomResult SciterGetElementInnerText16(IntPtr he, /*[MarshalAs(UnmanagedType.LPWStr)]*/ out IntPtr utf16words);

        /// <summary>
        /// Get number of element's attributes.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetAttributeCount")]
        private static extern ScDomResult SciterGetAttributeCount(IntPtr he, out int p_count);

        /// <summary>
        /// Get value of any element's attribute by attribute's number.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetNthAttribute")]
        private static extern ScDomResult SciterGetNthAttribute(IntPtr he, int n, /*[MarshalAs(UnmanagedType.LPStr)]*/ out IntPtr p_name, /*[MarshalAs(UnmanagedType.LPWStr)]*/ out IntPtr p_value);

        /// <summary>
        /// Get value of any element's attribute by name.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetAttributeByName")]
        private static extern ScDomResult SciterGetAttributeByName(IntPtr he, /*[MarshalAs(UnmanagedType.LPStr)]*/ Byte[] name, /*[MarshalAs(UnmanagedType.LPWStr)]*/ out IntPtr p_value);

        /// <summary>
        /// Set attribute's value.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutSetAttributeByName")]
        private static extern ScDomResult SciterSetAttributeByName(IntPtr he, /*[MarshalAs(UnmanagedType.LPStr)]*/ Byte[] name, [MarshalAs(UnmanagedType.LPWStr)] String value);

        /// <summary>
        /// Remove all attributes from the element.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutClearAttributes")]
        private static extern ScDomResult SciterClearAttributes(IntPtr he);

        /// <summary>
        /// Get element index. 
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetElementIndex")]
        private static extern ScDomResult SciterGetElementIndex(IntPtr he, out int p_index);

        /// <summary>
        /// Get element's text.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetElementType")]
        private static extern ScDomResult SciterGetElementType(IntPtr he, /*[MarshalAs(UnmanagedType.LPStr)]*/ out IntPtr p_type);

        /// <summary>
        /// Get element's style attribute.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetStyleAttribute")]
        private static extern ScDomResult SciterGetStyleAttribute(IntPtr he, /*[MarshalAs(UnmanagedType.LPStr)]*/ Byte[] name, /*[MarshalAs(UnmanagedType.LPWStr)]*/ out IntPtr p_value);

        /// <summary>
        /// Set element's style attribute.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutSetStyleAttribute")]
        private static extern ScDomResult SciterSetStyleAttribute(IntPtr he, /*[MarshalAs(UnmanagedType.LPStr)]*/ Byte[] name, [MarshalAs(UnmanagedType.LPWStr)] String value);

        /// <summary>
        /// Get bounding rectangle of the element.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetElementLocation")]
        private static extern ScDomResult SciterGetElementLocation(IntPtr he, out Rectangle p_location, ELEMENT_AREA areas);

        /// <summary>
        /// Scroll to view.
        /// </summary>
        /// <remarks>
        /// TODO: Update to HTMLAYOUT_SCROLL_FLAGS
        /// </remarks>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutScrollToView")]
        private static extern ScDomResult SciterScrollToView(IntPtr he, bool toTopOfView);

        /// <summary>
        /// Apply changes and refresh element area in its window.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutUpdateElement")]
        private static extern ScDomResult SciterUpdateElement(IntPtr he, bool renderNow);

        ///// <summary>
        ///// refresh element area in its window.
        ///// </summary>
        //[DllImport("htmlayout.dll", EntryPoint = "")]
        //private static extern ScDomResult RefreshWndAreaCallback(IntPtr he, Rectangle rc);

        /// <summary>
        /// Set the mouse capture to the specified element.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutSetCapture")]
        private static extern ScDomResult SciterSetCapture(IntPtr he);

        /// <summary>
        /// Releases the mouse capture from the specified element.
        /// </summary>
        [DllImport(User32.ImportLibrary)]
        static extern bool ReleaseCapture();

        /// <summary>
        /// Get IntPtr of containing window.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetElementHwnd")]
        private static extern ScDomResult SciterGetElementHwnd(IntPtr he, out IntPtr p_IntPtr, bool rootWindow);

        /// <summary>
        /// Combine given URL with URL of the document element belongs to.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutCombineURL")]
        private static extern ScDomResult SciterCombineURL(IntPtr he, [MarshalAs(UnmanagedType.LPWStr)] StringBuilder szUrlBuffer, int urlBufferSize);

        /// <summary>
        /// Call specified function for every element in a DOM that meets specified CSS selectors.
        /// TODO: WIDE Version available
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutSelectElements")]
        private static extern ScDomResult SciterSelectElements(IntPtr he, byte[] CSS_selectors, [MarshalAs(UnmanagedType.FunctionPtr)] SciterElementCallback callback, IntPtr param);

        /// <summary>
        /// Find parent of the element by CSS selector. 
        /// TODO: Wide version available
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutSelectParent")]
        private static extern ScDomResult SciterSelectParent(IntPtr he, /*[MarshalAs(UnmanagedType.LPStr)]*/ Byte[] selector, int depth, out IntPtr heFound);

        /// <summary>
        /// Set inner or outer html of the element.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutSetElementHtml")]
        private static extern ScDomResult SciterSetElementHtml(IntPtr he, /*[MarshalAs(UnmanagedType.LPStr)]*/ Byte[] html, int htmlLength, SET_ELEMENT_HTML where);

        /// <summary>
        /// Get inner text of the element as LPWSTR (utf16 words).
        /// </summary>
        [DllImport(SciterHostApi.SciterDll, EntryPoint = "HTMLayoutGetElementInnerText16")]
        private static extern ScDomResult SciterGetElementText(IntPtr he, /*[MarshalAs(UnmanagedType.LPWStr)]*/ out IntPtr utf16words);


        /// <summary>
        /// Set inner text of the element from LPCWSTR buffer (utf16 words).
        /// </summary>
        [DllImport(SciterHostApi.SciterDll, EntryPoint = "HTMLayoutSetElementInnerText16")]
        private static extern ScDomResult SciterSetElementText(IntPtr he, [MarshalAs(UnmanagedType.LPWStr)] string utf16words, int length);

        /// <summary>
        /// This function removes element from the DOM tree and then deletes it.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutDeleteElement")]
        private static extern ScDomResult SciterDeleteElement(IntPtr he);

        /// <summary>
        /// Get Element UID.
        /// </summary>
        /// <remarks>Element UID support functions. 
        /// Element UID is unique identifier of the DOM element. 
        /// UID is suitable for storing it in structures associated with the view/document.
        /// Access to the element using IntPtr is more effective but table space of handles is limited.
        /// It is not recommended to store IntPtr handles between function calls.
        /// </remarks>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetElementUID")]
        private static extern ScDomResult SciterGetElementUID(IntPtr he, out int puid);

        /// <summary>
        /// Get Element handle by its UID.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetElementByUID")]
        private static extern ScDomResult SciterGetElementByUID(IntPtr hwnd, int uid, out IntPtr phe);
